--- a/src/app.css
+++ b/src/app.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 }
 
-html {
+html, body {
     scroll-behavior: smooth;
+    scroll-snap-type: y mandatory;
+    overscroll-behavior: none;
+    margin: 0;
+    padding: 0;
 }
